--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -50,25 +50,24 @@
         android:layout_marginRight="55dp"
         android:layout_marginTop="30dp"
         >
-        <TextView
-            android:id="@+id/addVid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            />
-        <VideoView
-            android:id="@+id/videoViewNewEx"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            />
+        <!--<TextView-->
+            <!--android:id="@+id/addVid"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--/>-->
+        <!--<VideoView-->
+            <!--android:id="@+id/videoViewNewEx"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="left"-->
+            <!--/>-->
 
         <ImageView
             android:id="@+id/imageViewNewEx"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/addpic"
-            android:layout_gravity="right"/>
+            android:background="@drawable/addpic2"
+            />
 
 
     </android.support.v7.widget.CardView>
