--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,30 +25,30 @@
         android:text="مستخدم حالي"
         android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/arabicTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_marginStart="105dp"
-        android:text="عربي"
-        android:textSize="18dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="105dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/arabicTxt"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignTop="@+id/textView3"-->
+        <!--android:layout_marginStart="105dp"-->
+        <!--android:text="عربي"-->
+        <!--android:textSize="18dp"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_marginLeft="105dp" />-->
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="97dp"
-        android:text="English"
-        android:textSize="18dp"
-        android:layout_marginRight="97dp"
-        android:layout_alignParentRight="true" />
+    <!--<TextView-->
+        <!--android:id="@+id/textView3"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginBottom="50dp"-->
+        <!--android:layout_marginEnd="97dp"-->
+        <!--android:text="English"-->
+        <!--android:textSize="18dp"-->
+        <!--android:layout_marginRight="97dp"-->
+        <!--android:layout_alignParentRight="true" />-->
 
     <TextView
         android:id="@+id/newUserTxt"
@@ -82,14 +82,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="180dp" />
 
-    <VideoView
-        android:id="@+id/video"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </VideoView>
+    <!--<VideoView-->
+        <!--android:id="@+id/video"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+    <!--</VideoView>-->
 
 </RelativeLayout>
