--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -22,19 +22,20 @@
 
             <EditText
                 android:id="@+id/txtQuantity"
-                android:layout_width="59dp"
-                android:maxLength="4"
+                android:layout_width="wrap_content"
+                android:maxLength="15"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="52dp"
-                android:layout_marginStart="52dp"
+                android:layout_toLeftOf="@+id/txtIngr"
+                android:layout_marginLeft="33dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginVertical="5dp"
                 android:background="@drawable/custom_table_text"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="date"
                 android:textColor="@color/blackGrey"
                 android:textSize="14sp" />
 
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="25dp"
                 android:background="@drawable/custom_table_text"
                 android:gravity="center"
                 android:layout_marginVertical="5dp"
@@ -55,13 +56,16 @@
                 android:textSize="14sp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="32dp" />
+
             <Button
                 android:id="@+id/btn_delet"
                 android:layout_width="33dp"
                 android:layout_height="wrap_content"
-                android:text="X"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:gravity="center_vertical"
-                />
+                android:text="X"
+                android:layout_alignParentLeft="true" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
