--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -79,6 +79,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_edit_text_white"
+        android:maxLength="20"
         android:ems="10"
         android:gravity="center"
         android:hint="اسم التمرين"
