--- a/app/src/main/res/layout/card_sets_show.xml
+++ b/app/src/main/res/layout/card_sets_show.xml
@@ -27,10 +27,10 @@
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginStart="25dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
@@ -58,6 +58,7 @@
                 android:inputType="number"
                 android:text="1"
                 android:textSize="18dp"
+                app:layout_constraintLeft_toRightOf="@+id/txtReps"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -66,17 +67,17 @@
             <TextView
                 android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
-                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -91,14 +92,12 @@
                 android:layout_width="62dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
-
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -111,20 +110,22 @@
                 android:id="@+id/txtWeight"
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
-                android:maxLength="3"
                 android:layout_marginBottom="4dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
-                android:inputType="number"
                 android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txtReps"
                 app:layout_constraintStart_toEndOf="@+id/txtRM1"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
+                 />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
