--- a/app/src/main/res/layout/card_sets_show_free.xml
+++ b/app/src/main/res/layout/card_sets_show_free.xml
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" >
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/relativeLayout10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -28,96 +28,128 @@
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="-111dp"
-                android:layout_marginVertical="4dp"
-                android:layout_toEndOf="@+id/txtWeight"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="2"
-                android:layout_marginLeft="-111dp"
-                android:layout_toRightOf="@+id/txtWeight" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txtSet"
+                app:layout_constraintStart_toEndOf="@+id/txtWeight"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.466" />
 
 
             <TextView
                 android:id="@+id/txtSet"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginBottom="4dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
                 android:gravity="center"
                 android:inputType="number"
                 android:text="1"
                 android:textSize="18dp"
-                android:layout_alignParentRight="true" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/etReps"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
                 android:id="@+id/textViewVolume"
-                android:layout_width="69dp"
-                android:layout_height="36dp"
-                android:layout_alignParentStart="true"
+                android:layout_width="59dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="34dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginVertical="4dp"
+                android:layout_toLeftOf="@+id/txtRM1"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
                 android:textSize="18dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="34dp" />
+                app:layout_constraintRight_toLeftOf="@+id/txtRM1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btn_delet"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
                 android:id="@+id/txtRM1"
-                android:layout_width="54dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="110dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginVertical="4dp"
+                android:layout_toLeftOf="@+id/txtWeight"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
                 android:textSize="18dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="110dp" />
+                app:layout_constraintRight_toLeftOf="@id/txtWeight"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textViewVolume"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/txtWeight"
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="117dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="3"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="117dp" />
-        </RelativeLayout>
+                app:layout_constraintRight_toLeftOf="@+id/etReps"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/txtRM1"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btn_delet"
                 android:layout_width="33dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center_vertical"
-                android:text="X" />
+                android:text="X"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+
+
     </android.support.v7.widget.CardView>
+
+
 
 
 
