--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -90,6 +90,8 @@
                 android:id="@+id/txtNameExercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:gravity="right"
