--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -83,6 +83,7 @@
                 android:gravity="center"
                 android:textColor="@color/blackGrey"
                 android:textSize="18sp"
+                android:maxLength="3"
                 android:layout_alignLeft="@+id/tvPreviousWeight" />
 
             <TextView
