--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -110,7 +110,7 @@
                 android:id="@+id/mealImg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/addpic"/>
+                android:src="@drawable/addpic2"/>
 
         </android.support.v7.widget.CardView>
 
